<resources>
    <string name="app_name">SkillSwap</string>
    <string name="sign_up">Sign up</string>
    <string name="login">LOGIN</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="log_in">Log in</string>
    <string name="last_name">Last name...</string>
    <string name="name">First name...</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign up.</string>
    <string name="nothing_here_yet">Nothing here yet...</string>
</resources>