<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <EditText
        android:id="@+id/firstname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/lastname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_margin="20dp"/>


    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="20dp"/>
    <!-- TODO: make toggleable password visibility eye thingy for password field -->

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/sign_up"
        android:layout_margin="20dp"/>

    <!-- Spacer pushes content down -->


    <TextView
        android:id="@+id/login_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bolditalic"
        />






</LinearLayout>